# mkdocs-mcp

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yaml
docs/: install.md
src/mkdocs_mcp/: __init__.py  __main__.py  plugin.py
tests/: test_init.py  test_populate_mcp_app.py
