[project]
name = "mkdocs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Urs Baumann", email = "github@m.ubaumann.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
