[project]
name = "mkdocs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Urs Baumann", email = "github@m.ubaumann.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "mkdocs>=1.6.1",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
]

[project.entry-points.'mkdocs.plugins']
mcp = "mkdocs_mcp.plugin:MkDocsMCP"
